objects/Consequence__c.object
<CustomObject>
    <fields>
        <fullName>Behavior_Incident_ID_Formula__c</fullName>
        <formula>Student__r.Behavior_Incident__r.Id</formula>
        <label>Behavior Incident ID Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Type_Formula__c</fullName>
        <formula>Text(Student__r.Behavior_Incident__r.Behavior_Type__c)</formula>
        <label>Behavior Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence_Category__c</fullName>
        <formula>CASE( Consequence__c , 
&quot;Suspension (Out of School)&quot;, &quot;Time Away&quot;, 
&quot;Suspension (In School)&quot;, &quot;Time Away&quot;, 
&quot;Student Sent Home (Not Suspended)&quot;, &quot;Time Away&quot;, 
&quot;Conference with Administrator&quot;, &quot;Time Away&quot;, 
&quot;Conference with BCC&quot;, &quot;Time Away&quot;, 
&quot;Buddy Classroom/Reflection Room&quot;, &quot;Time Away&quot;, 
&quot;Other Time Away&quot;, &quot;Time Away&quot;, 
&quot;Saturday Detention&quot;,  &quot;Loss of Privilege&quot;, 
&quot;Refocus Center (Time after school)&quot;, &quot;Loss of Privilege&quot;, 
&quot;Fieldwork Restriction&quot;, &quot;Loss of Privilege&quot;, 
&quot;Lose Free Time (Recess)&quot;, &quot;Loss of Privilege&quot;, 
&quot;Lose Free Time (Choice Time)&quot;, &quot;Loss of Privilege&quot;, 
&quot;Silent Lunch&quot;,  &quot;Loss of Privilege&quot;, 
&quot;Other Loss of Privilege&quot;, &quot;Loss of Privilege&quot;, 
&quot;Suspendable (Waived)&quot;,  &quot;Other&quot;, 
&quot;Service (Break It Fix it)&quot;, &quot;Other&quot;, 
&quot;Other&quot;, &quot;Other&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consequence Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence_Read_Only__c</fullName>
        <formula>Picklist_Value__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consequence Read Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence_Weighting__c</fullName>
        <formula>Picklist_Value__r.Consequence_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consequence Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consequence__c</fullName>
        <label>Consequence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Admin Decision</fullName>
                </value>
                <value>
                    <fullName>Buddy Classroom/Reflection Room</fullName>
                </value>
                <value>
                    <fullName>Conference with Administrator</fullName>
                </value>
                <value>
                    <fullName>Conference with BCC</fullName>
                </value>
                <value>
                    <fullName>Fieldwork Restriction</fullName>
                </value>
                <value>
                    <fullName>Lose Free Time (Choice Time)</fullName>
                </value>
                <value>
                    <fullName>Lose Free Time (Recess)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Loss of Privilege</fullName>
                </value>
                <value>
                    <fullName>Other Time Away</fullName>
                </value>
                <value>
                    <fullName>Refocus Center (Time after school)</fullName>
                </value>
                <value>
                    <fullName>Saturday Detention</fullName>
                </value>
                <value>
                    <fullName>Service (Break It Fix it)</fullName>
                </value>
                <value>
                    <fullName>Silent Lunch</fullName>
                </value>
                <value>
                    <fullName>Student Sent Home (Not Suspended)</fullName>
                </value>
                <value>
                    <fullName>Suspendable (Waived)</fullName>
                </value>
                <value>
                    <fullName>Suspension (In School)</fullName>
                </value>
                <value>
                    <fullName>Suspension (Out of School)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Re_entry__c</fullName>
        <label>Date of Re-entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Suspended__c</fullName>
        <inlineHelpText>In Days</inlineHelpText>
        <label>Days Suspended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Consequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Consequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_Date_Formula__c</fullName>
        <formula>Student__r.Behavior_Incident__r.Incident_Date__c</formula>
        <label>Incident Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Suspended__c</fullName>
        <description>Used to determine if consequence should be included in Behavior Reporting Stats</description>
        <formula>IF( Picklist_Value__r.Is_Suspension__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Suspended?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist Value</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Consequences</relationshipLabel>
        <relationshipName>Consequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Re_entry_Mtg_Date__c</fullName>
        <label>Re-entry Mtg Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_entry_Mtg_Time__c</fullName>
        <label>Re-entry Mtg Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_entry_Notes__c</fullName>
        <label>Re-entry Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show_Suspension_In_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, the students attendance records for the days they have been suspended will be marked to reflect the suspension.</inlineHelpText>
        <label>Show Suspension In Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Consequence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Consequence</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Consequences</relationshipLabel>
        <relationshipName>Consequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Name_Formula__c</fullName>
        <formula>Student__r.Student__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Behavior Lookup</label>
        <referenceTo>Student_Behavior__c</referenceTo>
        <relationshipLabel>Consequences</relationshipLabel>
        <relationshipName>Consequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_s_Grade__c</fullName>
        <description>To enable reporting object to capture grade with id as unique reference</description>
        <formula>TEXT(Student_Consequence__r.Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student&apos;s Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspension_End_Date__c</fullName>
        <label>Suspension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension_Start_Date__c</fullName>
        <label>Suspension Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Lost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Lost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consequence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Consequence__c</columns>
        <columns>Student_Consequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CQ-{000000}</displayFormat>
        <label>Consequence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>