objects/Consequence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consequence__c</columns>
    <columns>Student_Consequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>